--- a/src/css/reactDropdown.css
+++ b/src/css/reactDropdown.css
@@ -1,4 +1,5 @@
 .Dropdown-root {
+  width: 200px;
   position: relative;
 }
 
@@ -12,7 +13,7 @@
   color: #333;
   cursor: default;
   outline: none;
-  padding: 4px 60px 4px 8px;
+  padding: 4px 40px 4px 8px;
   transition: all 200ms ease;
 }
 
