add 1200 cell limit, add json import, add json input export, add better testing

--- a/src/css/OptimizerApp.css
+++ b/src/css/OptimizerApp.css
@@ -34,7 +34,7 @@ body {
   margin-bottom: 10px
 }
 
-.import-from-csv-container,
+.importer-container,
 .choose-each-once-container,
 .run-optimizer-container,
 .export-options-label,
